Fix overflow hidden in ios

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -80,7 +80,7 @@ header {
   transition: all .5s ease;
   top: 0;
   width: 100%;
-  z-index: 1;
+  z-index: 2;
 }
 
 .logo {
